--- a/package.json
+++ b/package.json
@@ -25,19 +25,21 @@
     "dist/",
     "src"
   ],
+  "dependencies": {
+    "axios": "^0.18.0",
+    "jwt-decode": "^2.2.0",
+    "query-string": "^6.0.0",
+    "v-hotkey": "^0.2.0"
+  },
   "devDependencies": {
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "bili": "^3.0.14",
+    "vue-froala-wysiwyg": "^2.7.6",
     "rollup-plugin-flow": "^1.1.1",
     "rollup-plugin-pug": "^0.1.6",
     "rollup-plugin-vue": "^3.0.0",
     "vue-template-compiler": "^2.5.16",
     "parse5": "^4.0.0",
     "vue": "^2.5.16"
-  },
-  "dependencies": {
-    "axios": "^0.18.0",
-    "jwt-decode": "^2.2.0",
-    "query-string": "^6.0.0"
   }
 }
