--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "axios": "^0.18.0",
     "bulma": "^0.7.1",
     "debounce": "^1.1.0",
+    "file-saver": "^1.3.8",
     "jwt-decode": "^2.2.0",
     "query-string": "^6.0.0",
+    "v-clipboard": "^2.0.1",
     "v-hotkey": "^0.2.0",
     "vue": "^2.5.16",
     "vue-awesome": "^3.0.3",
