--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "p2": "npm publish",
     "p3": "git push --follow-tags",
     "test:e2e": "vue-cli-service test:e2e",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "inspect": "vue-cli-service inspect ./src/components/index.js"
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-loader": "^8.0.4",
     "bulma": "^0.7.1",
     "debounce": "^1.1.0",
     "file-saver": "^1.3.8",
@@ -26,33 +28,34 @@
     "query-string": "^6.0.0",
     "v-clipboard": "^2.0.1",
     "v-hotkey": "^0.2.0",
-    "vue": "^2.5.16",
+    "vue": "^2.5.17",
     "vue-awesome": "^3.0.3",
     "vue-drag-drop": "^1.1.2",
     "vue-froala-wysiwyg": "^2.8.4",
     "vue-split-panel": "^1.0.4",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "webpack": "^4.20.2"
   },
   "peerDependencies": {
     "vue-split-panel": "^1.0.4"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-beta.15",
-    "@vue/cli-plugin-e2e-cypress": "^3.0.0-rc.3",
-    "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
+    "@vue/cli-plugin-babel": "^3.0.4",
+    "@vue/cli-plugin-e2e-cypress": "^3.0.4",
+    "@vue/cli-plugin-eslint": "^3.0.4",
     "@vue/cli-plugin-unit-mocha": "^3.0.0-beta.15",
-    "@vue/cli-service": "^3.0.0-beta.15",
-    "@vue/test-utils": "^1.0.0-beta.16",
+    "@vue/cli-service": "^3.0.4",
+    "@vue/test-utils": "^1.0.0-beta.25",
     "babel-preset-vue-app": "^2.0.0",
     "chai": "^4.1.2",
-    "eslint": "^5.0.1",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-vue": "^4.5.0",
-    "node-sass": "^4.9.0",
+    "eslint": "^5.6.1",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-vue": "^4.7.1",
+    "node-sass": "^4.9.3",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
-    "sass-loader": "^7.0.3",
-    "vue-template-compiler": "^2.5.16"
+    "sass-loader": "^7.1.0",
+    "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
     "root": true,
