--- a/package.json
+++ b/package.json
@@ -19,18 +19,22 @@
     "inspect": "vue-cli-service inspect ./src/components/index.js"
   },
   "dependencies": {
+    "@babel/core": "^7.0.0-beta.47",
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@fortawesome/vue-fontawesome": "^0.1.4",
     "axios": "^0.18.0",
     "babel-loader": "^8.0.4",
-    "@babel/core": "^7.0.0-beta.47",
     "bulma": "^0.7.1",
     "debounce": "^1.1.0",
     "file-saver": "^1.3.8",
+    "i": "^0.3.6",
     "jwt-decode": "^2.2.0",
+    "npm": "^6.5.0",
     "query-string": "^6.0.0",
     "v-clipboard": "^2.0.1",
     "v-hotkey": "^0.2.0",
     "vue": "^2.5.17",
-    "vue-awesome": "^3.0.3",
     "vue-drag-drop": "^1.1.2",
     "vue-froala-wysiwyg": "^2.8.4",
     "vue-split-panel": "^1.0.4",
@@ -52,14 +56,17 @@
     "eslint": "^5.6.1",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-vue": "^4.7.1",
+    "hoek": ">=4.2.1",
+    "lodash.camelcase": "^4.3.0",
+    "merge-options": ">=1.0.1",
     "node-sass": "^4.9.3",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
+    "randomatic": ">=3.0.0",
     "sass-loader": "^7.1.0",
+    "vue-cli-plugin-webpack-bundle-analyzer": "^1.2.0",
     "vue-template-compiler": "^2.5.17",
-    "merge-options": ">=1.0.1",
-    "hoek": ">=4.2.1",
-    "randomatic": ">=3.0.0"
+    "webpack-node-externals": "^1.7.2"
   },
   "eslintConfig": {
     "root": true,
