--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "lint": "vue-cli-service lint",
     "build-bundle": "vue-cli-service build --target lib --name vue-contentservice ./src/components/index.js",
     "e2e:open": "vue-cli-service e2e:open",
-    "patch-release": "npm version patch && npm publish --registry=https://registry.npmjs.org/ && git push --follow-tags",
+    "patch-release": "npm version patch && npm publish --registry=https://registry.npmjs.org/ --access public && git push --follow-tags",
     "p1": "npm version patch",
-    "p2": "npm publish",
+    "p2": "npm publish --access public",
     "p3": "git push --follow-tags",
     "test:e2e": "vue-cli-service test:e2e",
     "test:unit": "vue-cli-service test:unit",
