--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.98",
   "private": false,
   "scripts": {
-    "serve": "vue-cli-service serve --open",
+    "serve": "vue-cli-service serve --open ./src/testapp/main.js",
     "build": "vue-cli-service build",
     "test": "vue-cli-service build",
     "e2e": "vue-cli-service e2e",
