--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tooltwist/vue-contentservice",
-  "version": "0.1.99",
+  "version": "0.2.1",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve --open ./src/testapp/main.js",
@@ -8,7 +8,7 @@
     "test": "vue-cli-service build",
     "e2e": "vue-cli-service e2e",
     "lint": "vue-cli-service lint",
-    "build-bundle": "vue-cli-service build --target lib --name vue-contentservice ./src/components/index.js",
+    "build-bundle": "vue-cli-service build --target lib --formats commonjs --name vue-contentservice ./src/components/index.js",
     "e2e:open": "vue-cli-service e2e:open",
     "patch-release": "npm version patch && npm publish --registry=https://registry.npmjs.org/ --access public && git push --follow-tags",
     "p1": "npm version patch",
@@ -27,6 +27,7 @@
     "axios": "^0.18.0",
     "babel-loader": "^8.0.4",
     "bulma": "^0.7.1",
+    "caniuse-lite": "^1.0.30000974",
     "debounce": "^1.1.0",
     "file-saver": "^1.3.8",
     "i": "^0.3.6",
